Add Bluesky back to contact page
Adds Bluesky back to the contact page's social media links. Icons were made smaller on all landscape orientations to compensate.

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             justify-content: end;
         }
         .grid-socials li a img{
-            width: 5vw;
+            width: 4.8vw;
             margin: 0 auto;
         }
         .grid-socials li a p{
@@ -155,7 +155,7 @@
                 font-size: 2rem;
             }
             .grid-socials li a img{
-                min-width: 9rem;
+                min-width: 7rem;
             }
         }
 
@@ -220,7 +220,7 @@
             }
 
             .grid-socials li a img{
-                width: 6vw;
+                width: 5.5vw;
             }
             .grid-socials li a p{
                 font-size: 1.5vw;
@@ -406,6 +406,12 @@
                     <a href="https://www.youtube.com/@inktrinket" target="_blank">
                         <img src="svg/socials/socials_YouTube.svg" alt="YouTube icon" data-invert-dark="true">
                         <p>YouTube</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://bsky.app/profile/inktrinket.bsky.social" target="_blank">
+                        <img src="svg/socials/socials_Bluesky.svg" alt="Bluesky icon" data-invert-dark="true">
+                        <p>Bluesky</p>
                     </a>
                 </li>
                 <li>
