Add JSON-LD sitelinks to homepage for rich SEO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "home - inktrinket",
+              "item": "https://inktrinket.video/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "about",
+              "item": "https://inktrinket.video/about"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "professional portfolio",
+              "item": "https://inktrinket.video/portfolio_professional"
+            },
+            {
+              "@type": "ListItem",
+              "position": 4,
+              "name": "personal portfolio",
+              "item": "https://inktrinket.video/portfolio_personal"
+            },
+            {
+              "@type": "ListItem",
+              "position": 5,
+              "name": "commissions",
+              "item": "https://inktrinket.video/commissions"
+            },
+            {
+              "@type": "ListItem",
+              "position": 6,
+              "name": "contact",
+              "item": "https://inktrinket.video/contact"
+            }
+          ]
+        }
+        </script>
+        
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home - inktrinket</title>
