Adjusted Portfolio Pages
Updated descriptions and titles for MCBS, inktrinket.video, and DJ neo on professional.

--- a/portfolio/inktrinket_video/index.html
+++ b/portfolio/inktrinket_video/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inktrinket.Video Website - inktrinket</title>
-    <meta name="description" content="In collaboration with Parker Lippstock, we created Inktrinket.video for my own professional and personal use.">
+    <meta name="description" content="Inktrinket.video is my website! It was created over the span of 3 to 4 months in collaboration with Parker Lippstock.">
     
     <script type="text/javascript">
         const type = "PROFESSIONAL";
@@ -81,8 +81,8 @@
             </div>
 
             <main class="grid-main__info">
-                <h1 class="grid-main__heading">Inktrinket.video Web Project</h1>
-                <p class="grid-main__paragraph">In collaboration with Parker Lippstock, we created Inktrinket.video for my own professional and personal use. The design process lasted for around 3 to 4 months, bouncing between multiple design iterations and project milestones along the way. Being the lead developer of the project, I was responsible for the concepting, branding, and overall lead development of the project. Lippstock was focused on designing the functional web and graphical elements, hand-coding the entire website from scratch.</p>
+                <h1 class="grid-main__heading">"inktrinket.video" Web Project</h1>
+                <p class="grid-main__paragraph">"inktrinket.video" is my website! It was created over the span of 3 to 4 months in collaboration with Parker Lippstock, with everything you see here fully handmade from scratch - from the graphics to the code of the website itself. We went through multiple design iterations that were tested day and night before we ended up with the version you see here today! Lippstock was in charge of constructing a majority of the technical elements of the website, such as the code and graphics - I was the project lead, responsible for visualizing the several concept iterations, creating the brand identity/philosophy, and getting the website to where it needed to go.</p>
                 <div class="grid-main__programs">
                     <h3>Programs Used</h3>
                     <ul id="program-list">
