--- a/portfolio/mcbs_presentation_anxiety/index.html
+++ b/portfolio/mcbs_presentation_anxiety/index.html
@@ -81,8 +81,8 @@
             </div>
 
             <main class="grid-main__info">
-                <h1 class="grid-main__heading">MCBS Presents: Presentation Anxiety</h1>
-                <p class="grid-main__paragraph">This video was a student project created by me and my MCBS peers at Full Sail University before I graduated. The goal of this project was to create an informative experience for recently enrolled students on campus who have presentation anxiety. We had a total of nine students working on the different components you can see here in the video, such as writing, camerawork, and project management. I was the lead video editor in this project, in which I pieced the produced assets together to create the final product.</p>
+                <h1 class="grid-main__heading">"MCBS Presents: Presentation Anxiety" Student Project</h1>
+                <p class="grid-main__paragraph">This video was created by me and my MCBS peers at Full Sail University before I graduated. The goal of this project was to create an informative experience for recently enrolled students on campus who have presentation anxiety. We had a total of nine students working on the different components you can see here in the video, such as writing, camerawork, and project management. I was the lead video editor in this project, in which I pieced the produced assets together to create the final product.</p>
                 <div class="grid-main__programs">
                     <h3>Programs Used</h3>
                     <ul id="program-list">
