Remove commissions page and related information

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact - inktrinket</title>
-    <meta name="description" content="If you would like to discuss commissions, past work, or have any questions at all, feel free to reach out!">
+    <meta name="description" content="If you would like to reach out to me for any reason, please feel free!">
 
     <link rel="preload" href="/main.js" as="script"/>
     <link rel="preload" href="/core.css" as="style"/>
@@ -338,7 +338,6 @@
                             <li><a href="/portfolio_personal.html" aria-label="Personal work portfolio">personal</a></li>
                         </ul>
                     </li>
-                    <li><a href="/commissions.html" aria-label="Commissions page">commissions</a></li>
                     <li><a href="/contact.html" aria-label="Contact page">contact</a></li>
                 </ul>
             </nav>
@@ -424,12 +423,6 @@
                     <a href="https://www.instagram.com/inktrinket_/" target="_blank">
                         <img src="svg/socials/socials_Instagram.svg" alt="Instagram icon" data-invert-dark="true">
                         <p>Instagram</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.fiverr.com/s/e675d5E" target="_blank">
-                        <img src="svg/socials/socials_Fiverr.svg" alt="Instagram icon" data-invert-dark="true">
-                        <p>Fiverr</p>
                     </a>
                 </li>
                 <li>
