--- a/portfolio_professional.html
+++ b/portfolio_professional.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>professional portfolio - inktrinket</title>
-    <meta name="description" content="These are some of the projects that I have made for work, school, or commissions!">
+    <meta name="description" content="These are some of the projects that I have made for work, school, or for others.">
 
     <script type="text/javascript">
         const type = "PROFESSIONAL";
@@ -135,7 +135,6 @@
                             <li><a href="/portfolio_personal.html" aria-label="Personal work portfolio">personal</a></li>
                         </ul>
                     </li>
-                    <li><a href="/commissions.html" aria-label="Commissions page">commissions</a></li>
                     <li><a href="/contact.html" aria-label="Contact page">contact</a></li>
                 </ul>
             </nav>
@@ -176,7 +175,7 @@
                         <tspan x="0" y="0">portfolio</tspan>
                     </text>
                 </svg>
-                <p>Here are some things that I have made for work, school, or commissions.</p>
+                <p>Here are some things that I have made for work, school, or for others.</p>
                 <div id="search">
                     <svg id="svg-search-glass" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
                         <path d="M196.59,179.97L127.63,111.02c19.51-27.45,16.99-65.86-7.6-90.45C92.61-6.86,47.99-6.86,20.57,20.57c-27.42,27.42-27.42,72.04,0,99.46,13.71,13.71,31.72,20.57,49.73,20.57,14.29,0,28.57-4.33,40.72-12.97l68.96,68.95c2.29,2.29,5.3,3.44,8.31,3.44s6.01-1.15,8.31-3.44c4.59-4.59,4.59-12.03,0-16.62ZM37.18,103.41c-18.26-18.26-18.26-47.97,0-66.23,9.13-9.13,21.12-13.7,33.12-13.7s23.99,4.56,33.12,13.7c18.26,18.26,18.26,47.97,0,66.23-18.26,18.26-47.97,18.26-66.23,0Z"/>
