Remove leftover commissions info

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home - inktrinket</title>
-    <meta name="description" content="I am a video designer who is looking to share my work and utilize my skillset with others. If you'd like to know more about me or are otherwise interested in my services, welcome!">
+    <meta name="description" content="I am a video designer who is looking to share my work and utilize my skillset with others. If you'd like to know more about me, welcome!">
 
     <link rel="preload" href="/main.js" as="script"/>
     <link rel="preload" href="/core.css" as="style"/>
@@ -614,7 +614,7 @@
             
             <main class="grid-main__b">
                 <h2 class="hero-subheading">Welcome to my website!</h2>
-                <p class="hero-paragraph">If you'd like to know more about me or are otherwise interested in my services, you can visit any of the pages up above!</p>
+                <p class="hero-paragraph">If you'd like to know more about me, you can visit any of the pages up above!</p>
                 <script type="text/javascript">
 
                     function setText(match){
