Add LinkedIn social link back to contact page

--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
                 gap: var(--space-small);
             }
             .grid-socials li a img{
-                width: 4rem;
+                width: 8vw;
                 margin: 0;
             }
             .grid-socials li a p{
@@ -283,10 +283,9 @@
                     grid-auto-flow: column;
                     place-items: center;
                     align-items: end;
-                    width: 100%;
                 }
                 .grid-socials li{
-                    width: 100%;
+                    max-width: 100%;
                 }
                 .grid-socials li a{
                     flex-direction: column;
@@ -298,6 +297,7 @@
                 }
                 .grid-socials li a p{
                     text-align: center;
+                    font-size: 2vw;
                 }
 
                 .toast{
@@ -423,6 +423,12 @@
                     <a href="https://www.instagram.com/inktrinket_/" target="_blank">
                         <img src="svg/socials/socials_Instagram.svg" alt="Instagram icon" data-invert-dark="true">
                         <p>Instagram</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/inktrinket/" target="_blank">
+                        <img src="svg/socials/socials_Linkedin.svg" alt="LinkedIn icon" data-invert-dark="true">
+                        <p>LinkedIn</p>
                     </a>
                 </li>
                 <li>
